# vscode-cpp-cmake-mysql-drogon-test06

./: .gitignore  conanfile.txt
application/: CMakeLists.txt
application/src/: main.cpp
extern_libs/: CMakeLists.txt
extern_libs/drogon/: CMakeLists.txt
extern_libs/drogon/include/drogon/: exports.h  version.h
extern_libs/lib_a/src/: a1.cpp  a2.cpp
extern_libs/trantor/: CMakeLists.txt
extern_libs/trantor/include/trantor/: exports.h
extern_libs/zzz_not_used_jsoncpp/: CMakeLists.txt
